[gd_scene load_steps=45 format=3 uid="uid://bq82t3qc1mxmb"]

[ext_resource type="Script" uid="uid://bryda6lc1suk7" path="res://Entities/Objects/BattleBoardEntity3d.gd" id="1_pvu71"]
[ext_resource type="PackedScene" uid="uid://b1c4gfp8xpktc" path="res://Components/Control/BattleBoardSelectorComponent.tscn" id="7_bckac"]
[ext_resource type="PackedScene" uid="uid://5tvqunkoa4l7" path="res://Components/Combat/FactionComponent.tscn" id="11_7xmvv"]
[ext_resource type="PackedScene" uid="uid://bpxceafnntnlu" path="res://Components/Visual/BattleBoardUIComponent.tscn" id="12_yubh6"]
[ext_resource type="PackedScene" uid="uid://7jcht5vta2uh" path="res://Entities/TurnBased/BattleBoardSelectorEntity.tscn" id="14_53p5e"]
[ext_resource type="ArrayMesh" uid="uid://ci4187cl4aub5" path="res://addons/edgeTile_Cube_001.res" id="18_jhjrj"]
[ext_resource type="PackedScene" uid="uid://s0og8g1dnuh5" path="res://Components/Visual/BattleBoardCameraComponent.tscn" id="18_tglbh"]
[ext_resource type="ArrayMesh" uid="uid://i4ab0ga60ki6" path="res://addons/edgeTileCorner_Cube_001.res" id="19_fakjh"]
[ext_resource type="ArrayMesh" uid="uid://dxyrffyyvh6kt" path="res://addons/edgeTileOuter_Cube_002.res" id="20_gw2tf"]
[ext_resource type="PackedScene" uid="uid://5aaxtt3m1et8" path="res://Components/Visual/BattleBoardGeneratorComponent.tscn" id="20_qca53"]
[ext_resource type="ArrayMesh" uid="uid://bk88dq18miudx" path="res://addons/edgeTileOuterCorner_Cube.res" id="21_lvoms"]
[ext_resource type="ArrayMesh" uid="uid://cfhtoriqvgamd" path="res://addons/edgeTileOuterSlantDownLayer2_Cube_003.res" id="21_qca53"]
[ext_resource type="ArrayMesh" uid="uid://071s0swisg4h" path="res://addons/outerTileSlantedCornerlLayer2New_Cube_002.res" id="24_tm5g8"]
[ext_resource type="PackedScene" uid="uid://d2bq2o7sskowf" path="res://Components/Movement/BattleBoardPathfindingComponent.tscn" id="39_c3fbh"]
[ext_resource type="PackedScene" uid="uid://bb4joyvy32i0e" path="res://Components/Visual/BattleBoardHighlightComponent.tscn" id="42_txsxw"]
[ext_resource type="PackedScene" uid="uid://dvnkwgrchnfae" path="res://Components/Visual/BattleBoardPresentationSystemComponent.tscn" id="55_dr6b8"]
[ext_resource type="PackedScene" uid="uid://wqm4tsu7jdj6" path="res://Components/Control/BattleBoardMouseSelectionComponent.tscn" id="55_kfhrd"]
[ext_resource type="PackedScene" uid="uid://bplacementui" path="res://Components/Visual/BattleBoardPlacementUIComponent.tscn" id="56_plcui"]
[ext_resource type="Script" uid="uid://cn6jmmjopywhq" path="res://Components/Control/BattleBoardClientStateComponent.gd" id="57_client_state"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jkgq8"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.99999946, 0.99888694, 0.8531521, 1)
stencil_flags = 2
stencil_outline_thickness = 0.048

[sub_resource type="BoxMesh" id="BoxMesh_ara6e"]
material = SubResource("StandardMaterial3D_jkgq8")
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_u1q8a"]
size = Vector3(1, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_myiv2"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.6509804, 0.39215687, 0.17254902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jhjrj"]
material = SubResource("StandardMaterial3D_myiv2")
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fakjh"]
size = Vector3(1, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gw2tf"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.9999972, 0.21721905, 0.26189446, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qca53"]
material = SubResource("StandardMaterial3D_gw2tf")
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ykuvn"]
size = Vector3(1, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a20kw"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0, 0.6030365, 0.16892394, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lvoms"]
material = SubResource("StandardMaterial3D_a20kw")
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_io2sp"]
size = Vector3(1, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tm5g8"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0, 0.5411765, 0.79607844, 1)
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_06tvy"]
material = SubResource("StandardMaterial3D_tm5g8")
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bbq4c"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0qtex"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lo71g"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_sukre"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gd4cs"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_82am4"]
size = Vector3(1, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c3fbh"]
resource_local_to_scene = true
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.06469653, 0.06469653, 0.06469653, 1)

[sub_resource type="BoxMesh" id="BoxMesh_j60e1"]
material = SubResource("StandardMaterial3D_c3fbh")

[sub_resource type="BoxShape3D" id="BoxShape3D_x54pr"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2gfsc"]
size = Vector3(1, 0.3, 1)

[sub_resource type="MeshLibrary" id="MeshLibrary_txsxw"]
item/0/name = "EvenTile"
item/0/mesh = SubResource("BoxMesh_ara6e")
item/0/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)
item/0/mesh_cast_shadow = 1
item/0/shapes = [SubResource("BoxShape3D_u1q8a"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/0/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/0/navigation_layers = 1
item/1/name = "OddTile"
item/1/mesh = SubResource("BoxMesh_jhjrj")
item/1/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)
item/1/mesh_cast_shadow = 1
item/1/shapes = [SubResource("BoxShape3D_fakjh"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/1/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/1/navigation_layers = 1
item/2/name = "HighlightedTile"
item/2/mesh = SubResource("BoxMesh_06tvy")
item/2/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)
item/2/mesh_cast_shadow = 1
item/2/shapes = [SubResource("BoxShape3D_bbq4c"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/2/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/2/navigation_layers = 1
item/3/name = "Edge"
item/3/mesh = ExtResource("18_jhjrj")
item/3/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/3/mesh_cast_shadow = 1
item/3/shapes = [SubResource("BoxShape3D_0qtex"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/3/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/3/navigation_layers = 1
item/4/name = "Corner"
item/4/mesh = ExtResource("19_fakjh")
item/4/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/4/mesh_cast_shadow = 1
item/4/shapes = [SubResource("BoxShape3D_lo71g"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/4/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/4/navigation_layers = 1
item/5/name = "OuterEdge"
item/5/mesh = ExtResource("20_gw2tf")
item/5/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/5/mesh_cast_shadow = 1
item/5/shapes = [SubResource("BoxShape3D_sukre"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/5/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/5/navigation_layers = 1
item/6/name = "OuterCorner"
item/6/mesh = ExtResource("21_lvoms")
item/6/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/6/mesh_cast_shadow = 1
item/6/shapes = [SubResource("BoxShape3D_gd4cs"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/6/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/6/navigation_layers = 1
item/7/name = "SlopeDown"
item/7/mesh = ExtResource("21_qca53")
item/7/mesh_transform = Transform3D(1, 8.742278e-08, -8.742278e-08, 8.742278e-08, -1, 0, -8.742278e-08, -7.642742e-15, -1, 0, 0, 0)
item/7/mesh_cast_shadow = 1
item/7/shapes = [SubResource("BoxShape3D_82am4"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/7/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/7/navigation_layers = 1
item/8/name = "BorderBox"
item/8/mesh = SubResource("BoxMesh_j60e1")
item/8/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/8/mesh_cast_shadow = 1
item/8/shapes = [SubResource("BoxShape3D_x54pr"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/8/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/8/navigation_layers = 1
item/9/name = "SlopeDownCorner"
item/9/mesh = ExtResource("24_tm5g8")
item/9/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/9/mesh_cast_shadow = 1
item/9/shapes = [SubResource("BoxShape3D_2gfsc"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/9/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/9/navigation_layers = 1
item/10/name = "AttackHighlightTile"
item/10/mesh = SubResource("BoxMesh_qca53")
item/10/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)
item/10/mesh_cast_shadow = 1
item/10/shapes = [SubResource("BoxShape3D_ykuvn"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/10/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/10/navigation_layers = 1
item/11/name = "SpecialAttackHighlightTile"
item/11/mesh = SubResource("BoxMesh_lvoms")
item/11/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)
item/11/mesh_cast_shadow = 1
item/11/shapes = [SubResource("BoxShape3D_io2sp"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)]
item/11/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/11/navigation_layers = 1

[node name="BattleBoardEntity3D" type="Node3D" groups=["entities", "turnBased"]]
script = ExtResource("1_pvu71")
width = 5
height = 7
isEnabled = false
isLoggingEnabled = false
metadata/_custom_type_script = "uid://bryda6lc1suk7"

[node name="BattleBoardSelectorEntity" parent="." instance=ExtResource("14_53p5e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.35, 3.5)

[node name="BattleBoardSelectorComponent" parent="BattleBoardSelectorEntity" instance=ExtResource("7_bckac")]
bob_amplitude = 0.1
bob_mid_height = 1.88

[node name="BattleBoardClientStateComponent" type="Node" parent="." groups=["components"]]
script = ExtResource("57_client_state")

[node name="BattleBoardUIComponent" parent="." instance=ExtResource("12_yubh6")]
visible = false

[node name="BattleBoardPlacementUIComponent" parent="." instance=ExtResource("56_plcui")]
layer = 2

[node name="FactionComponent" parent="." instance=ExtResource("11_7xmvv")]
factions = 1

[node name="BattleBoardCameraComponent" parent="." instance=ExtResource("18_tglbh")]
transform = Transform3D(0.9999999, 0, 0, 0, 0.99999994, 0, 0, 0, 0.9999999, 2.5, 0, 3.5)
camera_z_offset = 7.0
camera_height = 4.0
camera_yaw_deg = 0.0
camera_pitch_deg = -20.0
min_pitch_deg = -30.0
max_pitch_deg = 15.0
zoom_step = 0.5
min_zoom_distance = 3.0
max_zoom_distance = 11.0

[node name="BattleBoardPathfindingComponent" parent="." groups=["components"] instance=ExtResource("39_c3fbh")]

[node name="BattleBoardHighlightComponent" parent="." groups=["components"] instance=ExtResource("42_txsxw")]

[node name="BattleBoardMouseSelectionComponent" parent="." instance=ExtResource("55_kfhrd")]

[node name="BattleBoardPresentationSystemComponent" parent="." groups=["components"] instance=ExtResource("55_dr6b8")]

[node name="BattleBoardGeneratorComponent" parent="." instance=ExtResource("20_qca53")]
mesh_library = SubResource("MeshLibrary_txsxw")
